refact: combine ausbildung studium into one (#867)
* refact(backend): combine Ausbildung and Studium into one Praktikumsstelle

* refact(frontend): combine Ausbildung and Studium into one Praktikumsstelle

* chore(backend): format and fix pmd warning

* chore(backend): reorder Praktikumsstelle attributes

* chore(backend): format

* chore(frontend): update package-lock

* chore(frontend): update package-lock

* chore(frontend): update package-lock

* ci: update trivy from refarch-templates

* ci: update trivy from refarch-templates

* ci: trivy fail-fast false

* chore(backend): fix codeql warning

* chore(backend): implement review feedback

* chore: implement review feedback

* fix: implemented review feedback

---------

Co-authored-by: langehm <38280183+langehm@users.noreply.github.com>